infrastructure/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
        - name: app-v1
          image: app:v1
          imagePullPolicy: Never
          ports:
            - protocol: TCP
              containerPort: 8080
