infrastructure/manifest/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-v1
  labels:
    app: app-v1
spec:
  containers:
    - name: app-v1
      image: app:v1
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
